--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
 
-    <div id="main">
-        <img id="player" src="./assets/image/hero.png" alt="player">
+    <div id="main">  
+        
     </div>
-
+    <div id="painel">
+        <h1>Space Shooter</h1>
+        <h2>Detenha a invasão</h2>
+        <p>Use "<strong>W</strong>" para SUBIR, "<strong>S</strong>" para DESCER <br><br>
+            "<strong>N</strong>" para ATIRAR</p>
+        <button onclick="start()"></button>
+    </div>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/jquery-collision.min.js"></script>
 
