--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div id="painel">
         <h1>Space Shooter</h1>
         <h2>Detenha a invasão</h2>
-        <p>Use "<strong>W</strong>" para SUBIR, "<strong>S</strong>" para DESCER <br><br>
+        <p>"<strong>W</strong>" para SUBIR,</br>" <strong>S</strong>"para DESCER </br>
             "<strong>N</strong>" para ATIRAR</p>
+        
         <button onclick="start()"></button>
     </div>
     <script src="./assets/js/script.js"></script>
